# personal-docs

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
data/.eval/: golden_queries.jsonl  queries.jsonl  rerank_gap_probe.jsonl  reranker_model_benchmark.jsonl
docs/: architecture.md  graph-rag.md  mcp.md  phase3-graph-rag.md  usage.md
scripts/: golden_retrieval_eval.py  rerank_gap_probe.py  reranker_model_benchmark.py
src/pkb/: __main__.py  agent.py  cli.py  config.py  embeddings.py  eval_metrics.py  ingest.py  mcp_server.py  rerank.py  retrieve.py  search_log.py  store.py  tools.py  web.py
src/pkb/graph/: __init__.py  builder.py  extract.py  schema.py  store.py
src/pkb/graph/prompts/: extract.txt
src/pkb/templates/: base.html  chat.html  index.html  query.html
tests/: test_eval_metrics.py  test_ingest_expires_at.py  test_ingest_path_derivation.py  test_ingest_structure.py  test_lifecycle_filter.py  test_mcp_write_guardrail.py  test_retrieve_query_shapes.py  test_store_archive.py
