[project]
name = "pkb"
version = "0.1.0"
description = "Personal Knowledge Base - RAG 기반 개인 지식 관리 시스템"
requires-python = ">=3.11"
dependencies = [
    "elasticsearch>=8.17,<9",
    "sentence-transformers>=3.0",
    "tiktoken>=0.8",
    "pyyaml>=6.0",
    "typer>=0.15",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "python-multipart>=0.0.9",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "jinja2>=3.1",
    "langchain-anthropic>=0.3",
    "langchain-core>=0.3",
    "langgraph>=0.4",
    "mcp[cli]>=1.0",
    "markitdown[pdf,docx,pptx,xlsx]>=0.1",
    "watchdog>=4.0",
]

[project.scripts]
pkb = "pkb.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pkb"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM"]